# ChangeLog for app-misc/linux-logo
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/linux-logo/ChangeLog,v 1.68 2010/10/19 06:17:23 leio Exp $

  19 Oct 2010; Mart Raudsepp <leio@gentoo.org> linux-logo-5.02.ebuild:
  Drop to ~mips

*linux-logo-5.10-r1 (28 Aug 2010)

  28 Aug 2010; Michał Januszewski <spock@gentoo.org>
  +linux-logo-5.10-r1.ebuild, +files/linux_logo-5.10-makefile-tabs.patch:
  Fix compilation problems with make 3.82 (bug #334713), switch to EAPI 2,
  respect LDFLAGS.

*linux-logo-5.10 (05 Jul 2010)

  05 Jul 2010; Michał Januszewski <spock@gentoo.org>
  +linux-logo-5.10.ebuild:
  Version bump.

*linux-logo-5.07 (08 Feb 2010)

  08 Feb 2010; Michał Januszewski <spock@gentoo.org>
  +linux-logo-5.07.ebuild:
  Version bump.

*linux-logo-5.06 (17 Oct 2009)

  17 Oct 2009; Michał Januszewski <spock@gentoo.org>
  +linux-logo-5.06.ebuild:
  Version bump.

*linux-logo-5.04 (03 Jan 2009)

  03 Jan 2009; Michał Januszewski <spock@gentoo.org>
  +linux-logo-5.04.ebuild:
  Version bump.

  29 Oct 2008; Michał Januszewski <spock@gentoo.org>
  linux-logo-5.03.ebuild:
  Fix bug #243654 (respect the CC variable).

  15 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> linux-logo-5.03.ebuild:
  Don't use a sed command, override CFLAGS at make.

  10 Sep 2008; Michał Januszewski <spock@gentoo.org>
  -files/linux-logo-4.07-gentoo-logo.patch, -linux-logo-4.12.ebuild,
  -linux-logo-4.15.ebuild, -linux-logo-4.16.ebuild, -linux-logo-5.01.ebuild:
  Remove old ebuilds.

  27 Mar 2008; Jeroen Roovers <jer@gentoo.org> linux-logo-5.03.ebuild:
  Stable for HPPA (bug #214912).

  27 Mar 2008; nixnut <nixnut@gentoo.org> linux-logo-5.03.ebuild:
  Stable on ppc wrt bug 214912

  27 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
  linux-logo-5.03.ebuild:
  amd64 stable wrt bug #214912

  26 Mar 2008; Raúl Porcel <armin76@gentoo.org> linux-logo-5.03.ebuild:
  sparc/x86 stable

*linux-logo-5.03 (16 Feb 2008)
