@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX gentoo.logo 4732 RMD160 6321307167d956732cbfb6d52faf5f1252ffeef1 SHA1 250f09cf603d07c16ce5010d341c2c7329287286 SHA256 86ee09ee715d10e987274d3887dd5bfe6992bb4b08fbe4538b4eb4829f87c55f
 AUX gentoo2.logo 1640 RMD160 3797e98df403337ff805786bd15be13421558bc2 SHA1 d23566479591aaab49a8eaefedb603eec4642193 SHA256 2f9cda11a31e93873b424b5499437ffa3c3ae9e348f440e9ac14972c15df7850
 AUX linux-logo.conf 1213 RMD160 8df7fea63cb0e2531d638783d9513595216711a5 SHA1 62b13288453078ad56cc03e437b70fff3224fa23 SHA256 054ebe197d7f6c34c0e6245b1e9113384d6da16654c04ad8a8da3ed6b50ced4f
@@ -14,7 +17,14 @@ EBUILD linux-logo-5.03.ebuild 2066 RMD160 4f776a0a401ce42f2586c9fcf66b5498551cae
 EBUILD linux-logo-5.04.ebuild 2071 RMD160 40ca9898197657fc786774b66cb0572d8017d847 SHA1 e91c98065e03b87ca875241506cb9e16bafca44b SHA256 deb23fb6147d2077344dc08822cf383dd366817334cfd615ce377b56a39703a5
 EBUILD linux-logo-5.06.ebuild 2079 RMD160 04f1a3ee36e8d1e1afa1c966e09595ed3779c6d0 SHA1 33f079cc81fa632f458ea0b71c77db0aa59e896a SHA256 4dab191e3d83246201214557f7511cc25fc215bb84c53e9726b8543420b360cf
 EBUILD linux-logo-5.07.ebuild 2079 RMD160 64824c1763d19053f5f46ab0072ecbec5e882673 SHA1 8d3d20e43bbf9063c9bf65b4fa8824291885fb34 SHA256 f0c6d7601ea508e332388c1e0b4677dec524acdc73ebe978e107639c6b612150
-EBUILD linux-logo-5.10-r1.ebuild 2190 RMD160 179151242ab4085b9b3a48c9fe2e7ceed5dad79a SHA1 f659ad0c0714e7e5ca4576f73f047e68182264c0 SHA256 64dbc515bdcaa260cda29a6ce9ee7445a9141e708f382d2329fd7b517eb88a1b
+EBUILD linux-logo-5.10-r1.ebuild 2191 RMD160 f4e6c36bd5fbdbdeb208c38c14d0f33e4a4c05ec SHA1 55d78516ca081e3612609dcbb0d2a5cc83bd0b56 SHA256 221cfd09742767eeff5168e487afa390005ae5278c0c4c6ea4409fb5b38e807f
 EBUILD linux-logo-5.10.ebuild 2079 RMD160 de2862194d2fbe685b01d424564c5c1c01644272 SHA1 3124e2be0e0db2110c22675566309b564d9a2998 SHA256 f594d157bd3b71f1fc6edb7d283ca82550d8c5a290e8f31b3ff9311bddb23a38
-MISC ChangeLog 9773 RMD160 f140e8151a5905be05be91053c8effde2d55238e SHA1 c540beb7e3167013ae4c8c5d5efda717d6a22f37 SHA256 1cbf1943ec89b7f0408150e6101dc08eb0db68780b997b40f2fdf6583948be58
+MISC ChangeLog 9890 RMD160 12c8bea7f1998d46a176cf12cafd57937adcd13d SHA1 ee211fe067716f1ae97fc58a1887bfddbabc1850 SHA256 c6a00ed3a6c14b0fbda46af59fae4e2c794b92a4da06636d07f47cac0fd14100
 MISC metadata.xml 220 RMD160 6bb03cb6947aadf2672a58c61c1fb7aa405eaf86 SHA1 7810907f03c5a3ee23eeaa4b42699ce17bc5c3a7 SHA256 969b4125e7620e2fe0d616cb3cabbe52bd79e6c4bdd725ce807d5f4c7c1ad75d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF4EAREIAAYFAk3PiqEACgkQmWq1bYTyC0OabgD/R/g19xbPX0CeW9LuBMxdN2pI
+QaaE2utjNGaJzVpcRwYA/0/cItoooLOeQp5S98fBOWmPrKYjxWTKc9jVRftNT34s
+=yN4l
+-----END PGP SIGNATURE-----
