@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/linux-logo
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/linux-logo/ChangeLog,v 1.68 2010/10/19 06:17:23 leio Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/linux-logo/ChangeLog,v 1.69 2011/05/15 08:11:07 angelos Exp $
+
+  15 May 2011; Christoph Mende <angelos@gentoo.org> linux-logo-5.10-r1.ebuild:
+  Stable on amd64 wrt bug #367275
 
   19 Oct 2010; Mart Raudsepp <leio@gentoo.org> linux-logo-5.02.ebuild:
   Drop to ~mips
